--- a/ngApp/src/app/component/home/home.component.html
+++ b/ngApp/src/app/component/home/home.component.html
@@ -1,5 +1,2 @@
 <h2>Re-invent learning</h2>
-<ul>
-    <input type="text" [(ngModel)]="searchString" value="Search here">
-    <input type="button" value="Search" (click)="fetchData()">
-</ul>
+<h2>Home page</h2>
