--- a/ngApp/src/app/component/search/search.component.html
+++ b/ngApp/src/app/component/search/search.component.html
@@ -1,5 +1,5 @@
 <h1>Search Here!</h1>
 <ul>
     <input type="text" [(ngModel)]="searchString" value="Search here">
-    <input type="button" value="Search" (click)="fetchData()">
+    <input class="btn btn-info" type="button" value="Search" (click)="fetchData()">
 </ul>
