--- a/ngApp/src/app/component/home/home.component.html
+++ b/ngApp/src/app/component/home/home.component.html
@@ -1,3 +1,5 @@
-<h1>Welcome to {{ title }}</h1>
 <h2>Re-invent learning</h2>
-<h2>Home page</h2>
+<ul>
+    <input type="text" [(ngModel)]="searchString" value="Search here">
+    <input type="button" value="Search" (click)="fetchData()">
+</ul>
