--- a/ngApp/src/app/component/signup/signup.component.html
+++ b/ngApp/src/app/component/signup/signup.component.html
@@ -1,1 +1,16 @@
-<h2>Sign up</h2>
+<h2>Sign up</h2><br>
+Name<br>
+<input type="text" value="First">
+<input type="text" value="Last">
+<br>
+Username<br>
+<input type="text"><br>
+Password<br>
+<input type="password"><br>
+Re-Enter Password<br>
+<input type="password"><br>
+Email<br>
+<input type="email"><br>
+Favorite Color<br>
+<input type="color"><br>
+<input type="submit">
