--- a/ngApp/src/app/component/signup/signup.component.html
+++ b/ngApp/src/app/component/signup/signup.component.html
@@ -1,16 +1,49 @@
-<h2>Sign up</h2><br>
-Name<br>
-<input type="text" value="First">
-<input type="text" value="Last">
-<br>
-Username<br>
-<input type="text"><br>
-Password<br>
-<input type="password"><br>
-Re-Enter Password<br>
-<input type="password"><br>
-Email<br>
-<input type="email"><br>
-Favorite Color<br>
-<input type="color"><br>
-<input type="submit">
+<h2>Create your FlashBoard Account</h2>
+<div class="pageContent">
+  <div class="jumbotron signup-box">
+    <legend>
+      <strong>Name</strong>
+    </legend>
+    <div id="firstName" class="col-md-6">
+      <input class="form-control" type="text" placeholder="First">
+    </div>
+    <div id="lastName" class="col-md-6">
+      <input class="form-control" type="text" placeholder="Last">
+    </div>
+    <legend>
+      <strong>Username</strong>
+    </legend>
+    <div class="col-md-12">
+      <input class="form-control" type="text" name="username">
+    </div>
+    <legend>
+      <strong>Password</strong>
+    </legend>
+    <div class="col-md-12">
+      <input class="form-control" type="password" name="password">
+    </div>
+    <legend>
+      <strong>Re-Enter Password</strong>
+    </legend>
+    <div class="col-md-12">
+      <input class="form-control" type="password" name="rePassword">
+    </div>
+    <legend>
+      <strong>Email</strong>
+    </legend>
+    <div class="col-md-12">
+      <input class="form-control" type="email" name="email">
+    </div>
+    <legend>
+      <strong>Favorite Color</strong>
+    </legend>
+    <div class="col-md-3">
+      <input class="form-control" type="color" name="favColor">
+    </div>
+    <div class="confirm col-md-12">
+      <div>
+        <input class="btn btn-lg btn-primary" type="submit" value="Create Account">
+      </div>
+    </div>
+  </div>
+</div>
