--- a/ngApp/src/app/component/navbar/navbar.component.html
+++ b/ngApp/src/app/component/navbar/navbar.component.html
@@ -1,5 +1,13 @@
 <nav class="navbar navbar-light bg-faded">
-  <a class="navbar-brand" routerLink="home">FlashBoard</a>
+  <div class="navbar-header">
+    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+      <span class="icon-bar"></span>
+    </button>
+
+    <a class="navbar-brand" routerLink="home">FlashBoard</a>
+  </div>
   <ul class="nav navbar-nav">
     <li class="nav-item active">
       <a routerLink="home">Home</a>
