--- a/ngApp/src/app/component/navbar/navbar.component.html
+++ b/ngApp/src/app/component/navbar/navbar.component.html
@@ -16,10 +16,10 @@
       <a routerLink="search">Search</a>
     </li>
     <li class="nav-item">
-      <a routerLink="search">Create</a>
+      <a routerLink="create">Create</a>
     </li>
     <li class="nav-item">
-      <a routerLink="search">Browse</a>
+      <a routerLink="browse">Browse</a>
     </li>
   </ul>
   <ul class="nav navbar-nav navbar-right">
