--- a/ngApp/src/app/component/navbar/navbar.component.html
+++ b/ngApp/src/app/component/navbar/navbar.component.html
@@ -1,72 +1,48 @@
-<nav class="navbar navbar-light bg-faded">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
-
-    <a class="navbar-brand" routerLink="home">FlashBoard</a>
-  </div>
-  <ul class="nav navbar-nav">
+<nav class="navbar navbar-expand-sm bg-info navbar-dark">
+  <ul class="navbar-nav">
     <li class="nav-item active">
-      <a routerLink="home">Home</a>
+      <a class="nav-link" routerLink="home">FlashBoard</a>
     </li>
     <li class="nav-item">
-      <a routerLink="search">Search</a>
+      <a class="nav-link" routerLink="search">Search</a>
     </li>
     <li class="nav-item">
-      <a routerLink="search">Create</a>
+      <a class="nav-link" routerLink="create">Create</a>
     </li>
     <li class="nav-item">
-      <a routerLink="search">Browse</a>
+      <a class="nav-link" routerLink="browse">Browse</a>
     </li>
   </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <!-- Trigger the modal with a button -->
-    <li class="login" data-toggle="modal" data-target="#myModal">
-      <a>
-        <span class="glyphicon glyphicon-log-in"></span> Login</a>
-    </li>
-    <!-- Modal Start-->
-    <div class="modal fade" id="myModal" role="dialog">
-      <div class="modal-login">
-        <!-- Modal content-->
+
+  <div class="container">
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+      Open modal
+    </button>
+  
+    <!-- The Modal -->
+    <div class="modal fade" id="myModal">
+      <div class="modal-dialog">
         <div class="modal-content">
+        
+          <!-- Modal Header -->
           <div class="modal-header">
+            <h4 class="modal-title">Modal Heading</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Sign in to your account</h4>
           </div>
-          <!-- Modal Body here -->
+          
+          <!-- Modal body -->
           <div class="modal-body">
-            <ul>
-              <li>
-                <span>Username</span>
-              </li>
-              <li>
-                <input type="text" name="username" [(ngModel)]="username">
-              </li>
-              <li>
-                <span>Password</span>
-              </li>
-              <li>
-                <input type="password" name="password" [(ngModel)]="password">
-              </li>
-              <li>Forgot username</li>
-              <li>Forgot password</li>
-            </ul>
+            Modal body..
           </div>
+          
+          <!-- Modal footer -->
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal" (click)="loginAccount()">Log in</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
           </div>
+          
         </div>
       </div>
     </div>
-    <!-- ./Modal Ends -->
-    <li>
-      <a routerLink="signup" class="sign-up">
-        <span class="glyphicon glyphicon-user"></span> Sign Up</a>
-    </li>
-  </ul>
+    
+  </div>
 </nav>
