--- a/ngApp/src/app/component/navbar/navbar.component.html
+++ b/ngApp/src/app/component/navbar/navbar.component.html
@@ -15,10 +15,6 @@
   </ul>
 
   <div class="container">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
-      Open modal
-    </button>
-  
     <!-- The Modal -->
     <div class="modal fade" id="myModal">
       <div class="modal-dialog">
@@ -26,23 +22,48 @@
         
           <!-- Modal Header -->
           <div class="modal-header">
-            <h4 class="modal-title">Modal Heading</h4>
+            <h4 class="modal-title">Sign in to your account</h4>
             <button type="button" class="close" data-dismiss="modal">&times;</button>
           </div>
           
           <!-- Modal body -->
           <div class="modal-body">
-            Modal body..
+            <ul>
+              <li>
+                <span>Username</span>
+              </li>
+              <li>
+                <input type="text" name="username" [(ngModel)]="username">
+              </li>
+              <li>
+                <span>Password</span>
+              </li>
+              <li>
+                <input type="password" name="password" [(ngModel)]="password">
+              </li>
+              <li>Forgot username</li>
+              <li>Forgot password</li>
+            </ul>
           </div>
           
           <!-- Modal footer -->
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal" (click)="loginAccount()">Log in</button>
           </div>
           
         </div>
       </div>
     </div>
-    
+
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="signup">Sign Up</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#" data-toggle="modal" data-target="#myModal">Login</a>
+      </li>
+    </ul>
+   
   </div>
 </nav>
