--- a/ngApp/src/app/component/signup/signup.component.css
+++ b/ngApp/src/app/component/signup/signup.component.css
@@ -1,28 +1,8 @@
-legend{
-    font-size:14px;
+body { 
+    padding-top: 65px; 
 }
-input{
-    margin-top: -15px;
-    margin-bottom: 10px;
-}
-.confirm{
-    margin-top:50px;
-}
-.signup-box{
-    margin: 60px;
-    padding: 20px;
-    position: absolute;
-    right:10%;
-    width: 400px;
+div.form-text{
+    padding-left: 15px;
     text-align: left;
-    border-radius: 2%;
 }
-.btn{
-    float: right;
-}
-.form-control{
-    -webkit-border-radius: 5;
-       -moz-border-radius: 5;
-            border-radius: 5;
-  }
   
