--- a/BlitzServer/RESTServices/.settings/org.eclipse.wst.common.component
+++ b/BlitzServer/RESTServices/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
         <property name="java-output-path" value="/flashboard/target/classes"/>
-        <property name="context-root" value="FlashBoard"/>
+        <property name="context-root" value="flashboard"/>
     </wb-module>
 </project-modules>
