--- a/ngApp/src/app/component/navbar/navbar.component.html
+++ b/ngApp/src/app/component/navbar/navbar.component.html
@@ -1,72 +1,87 @@
-<nav class="navbar navbar-light bg-faded">
-  <div class="navbar-header">
-    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-      <span class="icon-bar"></span>
-    </button>
+<nav class="navbar navbar-light">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#myNavbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" routerLink="home">FlashBoard</a>
+    </div>
 
-    <a class="navbar-brand" routerLink="home">FlashBoard</a>
-  </div>
-  <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a routerLink="home">Home</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="search">Search</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="create">Create</a>
-    </li>
-    <li class="nav-item">
-      <a routerLink="browse">Browse</a>
-    </li>
-  </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <!-- Trigger the modal with a button -->
-    <li class="login" data-toggle="modal" data-target="#myModal">
-      <a>
-        <span class="glyphicon glyphicon-log-in"></span> Login</a>
-    </li>
-    <!-- Modal Start-->
-    <div class="modal fade" id="myModal" role="dialog">
-      <div class="modal-login">
-        <!-- Modal content-->
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Sign in to your account</h4>
-          </div>
-          <!-- Modal Body here -->
-          <div class="modal-body">
-            <ul>
-              <li>
-                <span>Username</span>
-              </li>
-              <li>
-                <input type="text" name="username" [(ngModel)]="username">
-              </li>
-              <li>
-                <span>Password</span>
-              </li>
-              <li>
-                <input type="password" name="password" [(ngModel)]="password">
-              </li>
-              <li>Forgot username</li>
-              <li>Forgot password</li>
-            </ul>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal" (click)="loginAccount()">Log in</button>
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="nav-item">
+          <a routerLink="search">
+            <span class="glyphicon glyphicon-search"></span> Search<span class="sr-only"></span></a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="create">
+            <span class="glyphicon glyphicon-pencil"></span> Create</a>
+        </li>
+        <li class="nav-item">
+          <a routerLink="browse">
+            <span class="glyphicon glyphicon-cutlery"></span> Browse</a>
+        </li>
+
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <!-- Trigger the modal with a button -->
+        <li *ngIf="loggedIn" class="login" data-toggle="modal" data-target="#myModal">
+          <a>
+            <span class="glyphicon glyphicon-log-in"></span> Log in</a>
+        </li>
+        <li *ngIf="!loggedIn" class="login">
+          <a>
+            <span class="glyphicon glyphicon-log-in"></span> Log out</a>
+        </li>
+
+        <!-- Modal Start-->
+        <div class="modal fade" id="myModal" role="dialog">
+          <div class="modal-login">
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Sign in to your account</h4>
+              </div>
+              <!-- Modal Body here -->
+              <div class="modal-body">
+                <ul>
+                  <li>
+                    <span>Username</span>
+                  </li>
+                  <li>
+                    <input type="text" name="username" [(ngModel)]="username">
+                  </li>
+                  <li>
+                    <span>Password</span>
+                  </li>
+                  <li>
+                    <input type="password" name="password" [(ngModel)]="password">
+                  </li>
+                  <li>Forgot username</li>
+                  <li>Forgot password</li>
+                </ul>
+              </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal" (click)="loginAccount()">Log in</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
+        <!-- ./Modal Ends -->
+        <li *ngIf="loggedIn">
+          <a routerLink="signup" class="sign-up">
+            <span class="glyphicon glyphicon-user"></span> Sign Up</a>
+        </li>
+        <li *ngIf="!loggedIn">
+          <a routerLink="profile">
+            <span class="glyphicon glyphicon-user"></span> Profile</a>
+        </li>
+      </ul>
     </div>
-    <!-- ./Modal Ends -->
-    <li>
-      <a routerLink="signup" class="sign-up">
-        <span class="glyphicon glyphicon-user"></span> Sign Up</a>
-    </li>
-  </ul>
+  </div>
 </nav>
