--- a/ngApp/src/app/component/browse/browse.component.html
+++ b/ngApp/src/app/component/browse/browse.component.html
@@ -1,7 +1,9 @@
 <h1>Browse component</h1>
 <div class="container">
   <div class="card col-sm-2 col-md-2" *ngFor="let topic of topics">
-    <h3 class="card-title">{{ topic.subject }}</h3>
-    <p class="card-text">{{ topic.description }}</p>
+    <a routerLink="/subject/{{topic.subject}}">
+      <h3 class="card-title">{{ topic.subject }}</h3>
+      <h5 class="card-text">{{ topic.description }}</h5>
+    </a>
   </div>
 </div>
