--- a/ngApp/src/app/component/browse/browse.component.css
+++ b/ngApp/src/app/component/browse/browse.component.css
@@ -1,8 +1,69 @@
-/* Add some padding inside the card container */
-.container {
-    padding: 2px 16px;
+.topics{
+    margin: 3em 0 2em 0;
+    list-style-type: none;
+    padding: 0;
+    width:12em;
+    text-align: left;
 }
-.card{
-    margin: 10px;
-    height: 120px;
+.topics .badge{
+    font-size: small;
 }
+
+.topics li{
+    cursor: pointer;
+    position: relative;
+    border-radius: 5px;
+    height: 1.6em;
+    margin: .5em;
+    background-color: #EEE;
+    margin: .5em;
+    padding: .3em .3em;
+    height: 2.2em;
+    border-radius: 4px;
+    
+}
+.topics li:hover {
+    color: #607D8B;
+    background-color: #DDD;
+    left: .1em;
+  }
+/*
+  .topics {
+    margin: 0 0 2em 0;
+    list-style-type: none;
+    padding: 0;
+    width: 10em;
+  }
+  .topics li {
+    cursor: pointer;
+    position: relative;
+    left: 0;
+    background-color: #EEE;
+    margin: .5em;
+    padding: .3em 0;
+    height: 1.6em;
+    border-radius: 4px;
+  }
+  .topics li.selected:hover {
+    background-color: #BBD8DC !important;
+    color: white;
+  }
+
+  .topics .text {
+    position: relative;
+    top: -3px;
+  }
+  .topics .badge {
+    display: inline-block;
+    font-size: small;
+    color: white;
+    padding: 0.8em 0.7em 0 0.7em;
+    background-color: #607D8B;
+    line-height: 1em;
+    position: relative;
+    left: -1px;
+    top: -4px;
+    height: 1.8em;
+    margin-right: .8em;
+    border-radius: 4px 0 0 4px;
+  } */
