--- a/ngApp/src/app/component/signup/signup.component.css
+++ b/ngApp/src/app/component/signup/signup.component.css
@@ -26,9 +26,9 @@ input{
             border-radius: 5;
 }
 .limit {
-    text-align:left;
+    position: absolute;
+    float: left;
     font-size: 14px;
-    width: 200px;
+    width: 150px;
     font-family: 'Lobster';
 }
-  
