--- a/ngApp/src/app/component/navbar/navbar.component.css
+++ b/ngApp/src/app/component/navbar/navbar.component.css
@@ -1,20 +1,23 @@
+.icon-bar{
+  color: rgb(90, 90, 200);
+  background-color: rgb(115, 115, 250);
+}
+.navbar-toggle {
+  border: solid .5px rgb(115, 115, 250);
+}
+
 .navbar-light {
-    border-bottom: 1px solid rgb(100, 100, 255);
-    padding-right: 3%;
-    border-radius: 0;
-  }
+  border-bottom: 1px solid rgb(90, 90, 200);
+  padding-right: 3%;
+  border-radius: 0;
+}
 
-  .sign-up:hover {
-    background-color: yellow;
-    color: red;
-  }
+.modal-login {
+  width: 350px;
+  margin-left: 37.5%;
+  margin-top: 10%;
+}
 
-  .modal-login {
-    width: 350px;
-    margin-left: 37.5%;
-    margin-top: 10%;
-  }
-
-  ul {
-    list-style-type: none;
-  }
+ul {
+  list-style-type: none;
+}
