--- a/ngApp/src/app/component/quiz/quiz.component.html
+++ b/ngApp/src/app/component/quiz/quiz.component.html
@@ -1,4 +1,5 @@
-<h2>{{quiz.name}}</h2>
+<h2>{{quiz.quizTitle}}</h2>
+<h4>By: {{quiz.username}}</h4>
 <button class="btn btn-default" (click)="goBack()">Go Back</button>
 <div class="quiz-section">
   <form>
