Added some css to profile file

--- a/ngApp/src/app/component/profile/profile.component.html
+++ b/ngApp/src/app/component/profile/profile.component.html
@@ -1,5 +1,5 @@
 <h1>Profile page</h1>
-<div class="text-center">
+<div class="text-center profile-box">
   <h3>Username: {{profile.username}}</h3>
   <h3>Average Score: {{profile.avgScore}}</h3>
   <h3>Favourite Color: {{profile.favColor}}</h3>
