study component configured not styled

--- a/ngApp/src/app/component/browse/browseTopic/browseTopic.component.html
+++ b/ngApp/src/app/component/browse/browseTopic/browseTopic.component.html
@@ -18,7 +18,7 @@
           {{quiz.description}}
         </div>
         <a routerLink="/quiz/{{quiz.quizId}}"><button class="btn btn-primary">Take Test</button></a> 
-        <a routerLink="/quiz/{{quiz.quizId}}"><button class="btn btn-info">Study Questions</button></a> 
+        <a routerLink="/study/{{quiz.quizId}}"><button class="btn btn-info">Study Questions</button></a> 
       </div>
     </li>
   </ul>
