--- a/ngApp/src/app/component/navbar/navbar.component.html
+++ b/ngApp/src/app/component/navbar/navbar.component.html
@@ -24,7 +24,7 @@
           <a routerLink="browse">
             <span class="glyphicon glyphicon-cutlery"></span> Browse</a>
         </li>
-        <li class="nav-item" *ngIf="authData.userRole == 2">
+        <li class="nav-item" *ngIf="userRole == 2">
           <a routerLink="admin"><span class="	glyphicon glyphicon-wrench"></span> Manage Users </a>
         </li>
 
@@ -43,38 +43,7 @@
 
         <!-- Modal Start-->
         <div class="modal fade" id="myModal" role="dialog">
-          <div class="modal-login">
-            <!-- Modal content-->
-            <div class="modal-content">
-              <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal">&times;</button>
-                <h4 class="modal-title">Sign in to your account</h4>
-              </div>
-              <!-- Modal Body here -->
-              <div class="modal-body">
-                <ul>
-                  <li>
-                    <span>Username</span>
-                  </li>
-                  <li>
-                    <input type="text" name="username" [(ngModel)]="username">
-                  </li>
-                  <li>
-                    <span>Password</span>
-                  </li>
-                  <li>
-                    <input type="password" name="password" [(ngModel)]="password">
-                  </li>
-                  <li>Forgot username</li>
-                  <li>Forgot password</li>
-                </ul>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal" (click)="loginAccount()">Log in</button>
-                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-              </div>
-            </div>
-          </div>
+         <app-login (thingy)="thingChange($event)"></app-login>
         </div>
         <!-- ./Modal Ends -->
         <li *ngIf="!loggedIn">
