--- a/ngApp/src/app/component/navbar/navbar.component.html
+++ b/ngApp/src/app/component/navbar/navbar.component.html
@@ -24,19 +24,19 @@
           <a routerLink="browse">
             <span class="glyphicon glyphicon-cutlery"></span> Browse</a>
         </li>
-        <li class="nav-item" *ngIf="userRole == 2">
+        <li class="nav-item" *ngIf="loginData.userRole == 2">
           <a routerLink="admin"><span class="	glyphicon glyphicon-wrench"></span> Manage Users </a>
         </li>
 
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <!-- Trigger the modal with a button -->
-        <li *ngIf="!loggedIn" class="login" data-toggle="modal" data-target="#myModal">
+        <li *ngIf="!loginData.loggedIn" class="login" data-toggle="modal" data-target="#myModal">
           <!-- pointer class is for styling the link, so the cursor will be a pointer, not a hightlight-->
           <a class="pointer">
             <span class="glyphicon glyphicon-log-in"></span> Log in</a>
         </li>
-        <li *ngIf="loggedIn" class="login" (click)=logOutAccount()>
+        <li *ngIf="loginData.loggedIn" class="login" (click)=logOutAccount()>
           <a class="pointer">
             <span class="glyphicon glyphicon-log-in"></span> Log out</a>
         </li>
@@ -46,12 +46,12 @@
          <app-login (login)="loginChange($event)"></app-login>
         </div>
         <!-- ./Modal Ends -->
-        <li *ngIf="!loggedIn">
+        <li *ngIf="!loginData.loggedIn">
           <a routerLink="signup" class="sign-up">
             <span class="glyphicon glyphicon-user"></span> Sign Up</a>
         </li>
-        <li *ngIf="loggedIn">
-          <a [routerLink]="profileUrl" class="profile">
+        <li *ngIf="loginData.loggedIn">
+          <a [routerLink]="loginData.profileUrl" class="profile">
             <span class="glyphicon glyphicon-user"></span> Profile</a>
         </li>
       </ul>
