implemented new create test component to angular infrastructure. New questions may be added dynamically on button click. More functionality to come.

--- a/ngApp/src/app/component/create/create.component.html
+++ b/ngApp/src/app/component/create/create.component.html
@@ -1,1 +1,7 @@
 <h3>Create Component</h3>
+<div>
+    <ul style = "list-style-type: none">
+        <li *ngFor = "let q of questions"><new-question id = {{q}}></new-question></li>
+    </ul>
+</div>
+<button (click)="addQuestion()" value="New Question" id="newQuestion">Add Question</button>
