--- a/ngApp/src/app/component/login/login.component.html
+++ b/ngApp/src/app/component/login/login.component.html
@@ -26,7 +26,7 @@
     </div>
     <div class="modal-footer">
       <button type="button" class="btn btn-default" data-dismiss="modal" (click)="loginAccount()">Log in</button>
-      <button type="button" class="btn btn-default" data-dismiss="modal" (click)="getThingy()">Close</button>
+      <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
     </div>
   </div>
 </div>
