Clean up some code

--- a/ngApp/src/app/component/navbar/navbar.component.html
+++ b/ngApp/src/app/component/navbar/navbar.component.html
@@ -25,7 +25,7 @@
             <span class="glyphicon glyphicon-cutlery"></span> Browse</a>
         </li>
         <li class="nav-item" *ngIf="loginData.userRole == 2">
-          <a routerLink="admin"><span class="	glyphicon glyphicon-wrench"></span> Manage Users </a>
+          <a routerLink="admin"><span class="	glyphicon glyphicon-wrench"></span> Administrative Tools </a>
         </li>
 
       </ul>
