--- a/ngApp/src/app/component/home/home.component.css
+++ b/ngApp/src/app/component/home/home.component.css
@@ -1,16 +1,5 @@
 * {
   font-family: 'Lobster', cursive;
 }
-.carousel{
-    background: #2f4357;
-    margin-top: 20px;
-}
-.carousel .item{
-    min-height: 280px; /* Prevent carousel from being distorted if for some reason image doesn't load */
-}
-.carousel .item img{
-    margin: 0 auto; /* Align slide image horizontally center */
-}
-.bs-example{
-	margin: 20px;
+.container{
 }
