--- a/ngApp/src/app/component/home/home.component.html
+++ b/ngApp/src/app/component/home/home.component.html
@@ -1,2 +1,4 @@
-<h1>Welcome to {{ title }}</h1>
-<h2>Re-invent learning</h2>
+<div class="container">
+  <h1>Welcome to {{ title }}</h1>
+  <h2>Re-invent learning</h2>
+</div>
