--- a/ngApp/src/app/component/study/study.component.html
+++ b/ngApp/src/app/component/study/study.component.html
@@ -35,6 +35,6 @@
       </div>
     </li>
   </ul>
-  <input type="textbox">
+  <input type="textarea">
   <button (click)="submitComment()">Submit Comment</button>
 </div>
