--- a/ngApp/src/app/app.component.html
+++ b/ngApp/src/app/app.component.html
@@ -2,4 +2,5 @@
 <app-navbar></app-navbar>
 <div style="text-align:center">
   <router-outlet></router-outlet>
+<!-- <app-footer></app-footer> uncomment after removing absolute in signup css -->
 </div>
