--- a/ngApp/src/app/component/browse/browseTopic/browseTopic.component.css
+++ b/ngApp/src/app/component/browse/browseTopic/browseTopic.component.css
@@ -2,8 +2,20 @@
     list-style-type: none;
 }
 .quiz{
+    padding:10px 10px 5px 2px;
     margin: 2em 2em;
-    border: black;
-    border-style: solid;
-    border-width: 1px;
+    border: 1px solid rgba(51,102,187,0.4);
+    box-shadow:  2px 2px 2px 2px rgba(51,102,187,0.4);
 }
+
+li {
+    line-height: 1.5em;
+    float: left;
+    display: inline;
+    width: 30%;
+  }
+  
+  .choices{
+      text-align: right;
+      margin: 10px 0 10px 0;
+  }
