--- a/ngApp/src/app/component/navbar/navbar.component.css
+++ b/ngApp/src/app/component/navbar/navbar.component.css
@@ -1,14 +1,14 @@
 .icon-bar {
-  color: rgb(90, 90, 200);
-  background-color: rgb(115, 115, 250);
+  color:  rgb(51,102,187);
+  background-color:  rgb(51,102,187);
 }
 
 .navbar-toggle {
-  border: solid .5px rgb(115, 115, 250);
+  border: solid .5px  rgb(51,102,187);
 }
 
 .navbar{
-  border-bottom: 1px solid rgb(144, 144, 255);
+  border-bottom: 1px solid  rgb(51,102,187);
   border-radius: 0
 }
 
