--- a/ngApp/src/app/component/quiz/quiz.component.css
+++ b/ngApp/src/app/component/quiz/quiz.component.css
@@ -9,18 +9,44 @@
     list-style-type: none;
 }
 
+.rating{
+    margin-left: 10px;
+}
+.add-comment{
+    resize:none;
+    margin-left:90px;
+    margin-right:90px;
+    width: 60%;
+    height: 100px;
+}
+
+#comments-label{
+    font-size: 18px;
+}
 #question-header {
     margin-bottom: 1em;
-    font-size: 40px;
+    font-size: 30px;
 }
+
+.submit-quiz{
+    margin-right: 20px;
+    text-align: right;
+}
+
 .options{
     margin-left: 15px;
     padding: 5px;
 }
+.comment-content{
+    color: darkslategrey;
+    font-size:16px;
+    margin-top: 5px;
+    margin-left: 10px;
+}
 .question, .comment {
-    margin: 40px;
+    margin: 20px;
     padding: 20px;
     border-style: solid;
-    border-color: rgba(80, 249, 255, 0.1);
-    box-shadow: 3px 4px 3px 0 rgba(80, 80, 255, 0.5);
+    border-color: rgba(51,102,187, 0.2);
+    box-shadow: 3px 4px 3px 0  rgba(51,102,187,0.5);
 }
