Added promotee component

--- a/ngApp/src/app/component/admin/admin.component.html
+++ b/ngApp/src/app/component/admin/admin.component.html
@@ -1,5 +1,15 @@
 <h2>Manage Users</h2>
 
-<div>
+<div id="banuser" class="container col-sm-4">
+    <div class="row">
+            <input type=text [(ngModel)]="userIdentifier"/>
+            <button type="button" class="btn-lg btn-danger">Ban user</button>
+    </div>
+   <div>{{Error}}</div>
+</div>
 
+<div id="promoteuser" class="container col-sm-4">
+    <div>
+
+    </div>
 </div>
