--- a/ngApp/src/app/component/promotee/promotee.component.html
+++ b/ngApp/src/app/component/promotee/promotee.component.html
@@ -1,1 +1,4 @@
-<div class=
+<div class="promotee">
+    <p>{{promotee.username}}</p>
+    <button type="button" class="btn btn-info">Button</button>
+</div>
