--- a/ngApp/src/app/component/admin/admin.component.html
+++ b/ngApp/src/app/component/admin/admin.component.html
@@ -12,7 +12,7 @@
     <div>
         <ul>
             <li *ngFor="let user of newUsers">
-                <app-promotee [promotee]="user"></app-promotee>
+                <app-newuser [newUser]="user"></app-newuser>
             </li>
         </ul>
         
