--- a/ngApp/src/app/component/newuser/newuser.component.html
+++ b/ngApp/src/app/component/newuser/newuser.component.html
@@ -1,4 +1,4 @@
-<div class="promotee">
-    <p>{{promotee.username}}</p>
+<div class="newuser">
+    <p>{{newUser.username}}</p>
     <button type="button" class="btn btn-info">Button</button>
 </div>
