--- a/ngApp/src/app/component/create/newquestion/newquestion.html
+++ b/ngApp/src/app/component/create/newquestion/newquestion.html
@@ -1,6 +1,7 @@
-<h3>New question</h3> 
+<h3 *ngIf="isFromTest">Question #{{index}}</h3> 
 <div>
-    <input type = "text" placeholder = "Question Text" name = "QuestionText"> 
+    <input type = "text" placeholder = "Question text..." name = "QuestionText"> 
+    <!-- <h3>questionTopic = {{topic}}</h3> -->
     <table>
         <tr>
             <th>Answers</th><th>Correct?</th>
@@ -10,7 +11,7 @@
                 <input type = "Text" name = "answer1text" placeholder = "Answer 1 text...">
             </td>
             <td>
-                <input type = "radio" name = "isCorrect1">
+                <input type = "radio" name = "isCorrect{{index}}" id = "1">
             </td>
         </tr>
         <tr>
@@ -18,7 +19,7 @@
                 <input type = "Text" name = "answer2text" placeholder = "Answer 2 text...">
             </td>
             <td>
-                <input type = "radio" name = "isCorrect2">
+                <input type = "radio" name = "isCorrect{{index}}" id = "2">
             </td>
         </tr>
         <tr>
@@ -26,7 +27,7 @@
                 <input type = "Text" name = "answer3text" placeholder = "Answer 3 text...">
             </td>
             <td>
-                <input type = "radio" name = "isCorrect3">
+                <input type = "radio" name = "isCorrect{{index}}" id = "3">
             </td>
         </tr>
         <tr>
@@ -34,7 +35,7 @@
                 <input type = "Text" name = "answer4text" placeholder = "Answer 4 text...">
             </td>
             <td>
-                <input type = "radio" name = "isCorrect4">
+                <input type = "radio" name = "isCorrect{{index}}" id = "4">
             </td>
         </tr>
 
