--- a/ngApp/src/app/component/newuser/newuser.component.html
+++ b/ngApp/src/app/component/newuser/newuser.component.html
@@ -1,4 +1,4 @@
 <div class="newuser">
-    <p>{{newUser.username}}</p>
+    <p>{{newUser}}</p>
     <button type="button" class="btn btn-info" (click)="sayHello()">Button</button>
 </div>
