--- a/ngApp/src/app/component/admin/admin.component.html
+++ b/ngApp/src/app/component/admin/admin.component.html
@@ -15,7 +15,7 @@
         <div class="col-sm-8">
           <input type=text class="form-control" [(ngModel)]="suspendUser" placeholder="Username"/>
         </div>
-            <button type="button" class="btn-lg btn-warning">Suspend</button>
+            <button type="button" class="btn-lg btn-warning" (click)="blacklistUser()">Suspend</button>
     </div>
    <div>{{Error}}</div>
 </div>
