Added ban user functionality

--- a/ngApp/src/app/component/newuser/newuser.component.html
+++ b/ngApp/src/app/component/newuser/newuser.component.html
@@ -1,7 +1,7 @@
-<div id="newuser" class="container">
+<div id="newuser" class="container" *ngIf="visible">
       <p>{{newUser}}</p>
       <div class="right">
-        <button type="button" class="btn btn-success" (click)="approveUser()">Button</button>
-        <button type="button" class="btn btn-danger" (click)="denyUser()">Button</button>
+        <button type="button" class="btn btn-success" (click)="approveUser()">Approve</button>
+        <button type="button" class="btn btn-danger" (click)="denyUser()">Deny</button>
       </div>
 </div>
