--- a/ngApp/src/app/component/admin/admin.component.html
+++ b/ngApp/src/app/component/admin/admin.component.html
@@ -5,7 +5,7 @@
         <div class="col-sm-8">
           <input type=text class="form-control" [(ngModel)]="banUser" placeholder="Username"/>
         </div>
-            <button type="button" class="btn-lg btn-danger">Ban user</button>
+            <button type="button" class="btn-lg btn-danger" (click)="deleteUser()">Ban user</button>
     </div>
    <div>{{Error}}</div>
 </div>
