--- a/ngApp/src/app/component/navbar/navbar.component.html
+++ b/ngApp/src/app/component/navbar/navbar.component.html
@@ -29,7 +29,7 @@
         </li>
         <li class="nav-item">
           <a routerLink="study">
-            <span class="glyphicon glyphicon-book"> Study</span>
+            <span class="glyphicon glyphicon-book"></span> Study
           </a>
         </li>
         <li class="nav-item" *ngIf="loginData.userRole == 2">
