--- a/ngApp/src/app/component/signup/signup.component.html
+++ b/ngApp/src/app/component/signup/signup.component.html
@@ -51,4 +51,9 @@
       </div>
     </div>
   </div>
+  <div class="description">
+    <h2>Be part of the community</h2>
+    <h3>Study, Learn and Share!</h3>
+    <img src="https://cmkt-image-prd.global.ssl.fastly.net/0.1.0/ps/2134011/1160/772/m1/fpnw/wm0/lightbulb-flat-icon-01-.jpg?1484566261&s=889140e5e50fcc3c959de2d4a7edab23" alt="lightbulb image" width="400">
+  </div>
 </div>
