--- a/ngApp/src/app/component/study/post-guide/post-guide.component.html
+++ b/ngApp/src/app/component/study/post-guide/post-guide.component.html
@@ -6,5 +6,7 @@
   <h4>Body</h4>
   <textarea [(ngModel)]="guideBody" (ngModelChange)="parseTextArea()" rows="10"></textarea>
   <h4>Featured Image URL</h4>
+  <input type="text" [(ngModel)]="guideImgUrl">
+  <br>
   <button class="btn btn-primary btn-large" (click)="submitGuide()">Submit Guide</button>
 </div>
